--- a/SeleniumJupiterToys-WebdriverIO/package.json
+++ b/SeleniumJupiterToys-WebdriverIO/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@testdeck/mocha": "0.0.6",
     "@types/chai": "^4.2.5",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.12.11",
@@ -26,7 +27,6 @@
     "geckodriver": "^1.19.1",
     "mocha": "^6.2.2",
     "mocha-parallel-tests": "^2.2.2",
-    "mocha-typescript": "^1.1.17",
     "ts-node": "^8.5.2",
     "typescript": "^3.7.2",
     "wdio-chromedriver-service": "^5.0.2",
